--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -8,9 +8,9 @@
 
         <div class="form-group">
             <label for="">Post</label>
-            <textarea id="w3review " class="form-control" name="postBody" rows="5 " cols="30 "></textarea>
+            <textarea type="text" class="form-control" name="postBody" rows="5" cols="30"></textarea>
         </div>
 
-        <button class="btn btn-primary" type="submit " name="button ">publish</button>
+        <button class="btn btn-primary" type="submit " name="buton ">publish</button>
     </form>
     <%- include("partials/footer") -%>
