--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,5 +3,12 @@
     <p>
         <%=para %>
     </p>
-
-    <%- include("partials/footer") -%>
+    <%   posts.forEach(function( post) { %>
+        <h1>
+            <%=post.title%>
+        </h1>
+        <p>
+            <%=post.content%>
+        </p>
+        <%});%>
+            <%- include("partials/footer") -%>
