--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,8 @@
             <%=post.title%>
         </h1>
         <p>
-            <%=post.content%>
+            <%=post.content.substring(0,100)+"..."%>
+                <a href="/posts/<%= post.title%>">Read More</a>
         </p>
         <%});%>
             <%- include("partials/footer") -%>
