--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,10 @@
 <%- include("partials/header") -%>
-    <h1>hello</h1>
-    <p>
-        <%=para %>
-    </p>
-    <%   posts.forEach(function( post) { %>
-        <h1>
-            <%=post.title%>
-        </h1>
-        <p>
-            <%=post.content.substring(0,100)+"..."%>
-                <a href="/posts/<%= post.title%>">Read More</a>
-        </p>
-        <%});%>
-            <%- include("partials/footer") -%>
+<h1>hello</h1>
+<p><%=startingContent %></p>
+<% posts.forEach(function( post) { %>
+<h1><%=post.title%></h1>
+<p>
+  <%=post.content.substring(0,100)+"..."%>
+  <a href="/posts/<%= post._id%>">Read More</a>
+</p>
+<%});%> <%- include("partials/footer") -%>
