--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,9 +1,6 @@
-<%- include("partials/header") -%>
-    <h1>
-        <%=title%>
-    </h1>
-    <p>
-        <%=content%>
-    </p>
+<%- include("partials/header"); -%>
 
-    <%- include("partials/footer") -%>
+<h1><%=title%></h1>
+<p><%=content%></p>
+
+<%- include("partials/footer"); -%>
