--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,16 +1,49 @@
 <%- include("partials/header") -%>
-    <h1>compose</h1>
-    <form action="/compose" method="post">
-        <div class="form-group">
-            <label for="">Title</label>
-            <input type="text" class="form-control" name="postTitle" />
-        </div>
+<div class="form-width container">
+  <div class="header">
+    <h4 class="head1"><%= todayDate %></h4>
+    <h1 class="head">Compose</h1>
+  </div>
 
-        <div class="form-group">
-            <label for="">Post</label>
-            <textarea type="text" class="form-control" name="postBody" rows="5" cols="30"></textarea>
-        </div>
+  <form action="/compose" method="post">
+    <div class="form-group">
+      <label for="">Title</label>
+      <input type="text" class="form-control" name="postTitle" />
+    </div>
+    <div class="form-group">
+      <label for="">Date</label>
+      <input type="text" class="form-control" name="form-date" disabled value="<%= todayDate %>"/>
+    </div>
+    <div class="form-group">
+      <label for="sel1" class="form-label">Type of Memory</label>
+      <select class="form-select form-control" id="sel1" name="feedBack">
+        <option>😄Happy!</option>
+        <option>😂Funny!</option>
+        <option>😯Wow!</option>
+        <option selected>🤗Memorable!</option>
+        <option>😡Angry!</option>
+        <option>😢Sad!</option>
+        <option>❤️Love!</option>
+        <option>😞Disappointment!</option>
+        <option>🤡Embarrassment!</option>
+      </select>
+    </div>
 
-        <button class="btn btn-primary" type="submit " name="buton ">publish</button>
-    </form>
-    <%- include("partials/footer") -%>
+    <div class="form-group">
+      <label for="">Describe It</label>
+      <textarea
+        type="text"
+        class="form-control"
+        name="postBody"
+        rows="5"
+        cols="30"
+      ></textarea>
+    </div>
+    <div class="but">
+      <button class="btn btn-primary btn-lg" type="submit " name="buton ">
+        publish
+      </button>
+    </div>
+  </form>
+</div>
+<%- include("partials/footer") -%>
