--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 </div>
-<div class="footer-padding"></div>
+<div class="footer-padding">
 <div class="footer">
     <p>Made with ❤️ by The App Brewery</p>
 </div>
